[gd_scene load_steps=4 format=3 uid="uid://rt2lmg0mecbq"]

[ext_resource type="Script" path="res://addons/tile_bit_tools/controls/tiles_preview/tiles_view.gd" id="1_7t85k"]
[ext_resource type="Script" path="res://addons/tile_bit_tools/controls/bit_data_draw/bit_data_draw.gd" id="1_kiwr1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d1ndd"]

[node name="TilesView" type="PanelContainer"]
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_d1ndd")
script = ExtResource("1_7t85k")

[node name="TerrainViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
disable_3d = true
transparent_bg = true
gui_snap_controls_to_pixels = false
size = Vector2i(300, 300)
render_target_update_mode = 1

[node name="BitDataDraw" type="Control" parent="TerrainViewport"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kiwr1")

[node name="BaseTilesRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 5

[node name="TerrainOverlayRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5
